# tnseq-analyzer

./: package-lock.json
backend/: .gitignore  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/src/: file_extension_handler.py  job_manager.py  main.py  router.py  schemas.py
backend/tests/: conftest.py  test_file_extension_handler.py  test_router.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  i18n.ts  index.css  index.tsx  main.ts  preload.ts  renderer.ts
frontend/src/components/: Description.tsx  Header.tsx  Sidebar.tsx  SidebarItem.tsx  Title.tsx  dropdownBtn.tsx  logo.tsx
frontend/src/components/analysis-historys/: ModalShowDetails.tsx  ModalShowResults.tsx  SearchBar.tsx
frontend/src/components/process-sample/: ChooseFile.tsx  InputAdvanced.tsx  InputManual.tsx  Progess.tsx
frontend/src/components/section-content/: BtnLoaderProject.tsx  BtnModal.tsx  CardInfo.tsx  CardSection.tsx  SectionContent.tsx
frontend/src/components/ui/: dropdownBtn.tsx
frontend/src/context/: AnalysisContext.tsx
frontend/src/hooks/: useAnalysis.ts  useFileHandler.ts  useInputAdvanced.ts
frontend/src/lib/: dialogs.ts  fileManager.ts  ipcHandlers.ts  languageSettingsManager.ts  windowManager.ts
frontend/src/locales/: en.json  pt.json
frontend/src/pages/: AnalysisHistoys.tsx  HomeScreen.tsx  InteractiveAnalysisScreen.tsx  LogsPipeline.tsx  ProcessSampleScreen.tsx
frontend/src/routes/: routes.tsx
frontend/src/services/: processSampleService.ts
frontend/src/types/: SidebarItem.type.ts  electron.d.ts  index.ts
frontend/src/utils/: analysisHistoryFileUtils.ts  formatDate.ts  pipelineLogFormatter.ts
