[project]
name = "tnseq-analyzer-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.10.0",
    "click>=8.2.1",
    "cutadapt>=5.1",
    "dnaio>=1.2.3",
    "fastapi>=0.116.1",
    "h11>=0.16.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "sniffio>=1.3.1",
    "starlette>=0.47.2",
    "typing-extensions>=4.14.1",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.35.0",
    "xopen>=2.0.2",
]
